--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#data
+data
+
 # Logs
 logs
 *.log
@@ -35,3 +38,6 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# OS
+.DS_Store
